Some fix about the dark mode

--- a/kasa/src/components/Banner/Banner.scss
+++ b/kasa/src/components/Banner/Banner.scss
@@ -30,15 +30,9 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background: rgba(0, 0, 0, 0.3);
+		background: rgba(0, 0, 0, var(--bannerOpacity));
 
-		@media (prefers-color-scheme: dark) {
-			background: rgba(0, 0, 0, 0.1);
-		}
-
-		html[data-theme='dark'] {
-			background: rgba(0, 0, 0, 0.1);
-		}
+	
 	}
 
 	h1 {
