--- a/kasa/src/components/Thumb/Thumb.scss
+++ b/kasa/src/components/Thumb/Thumb.scss
@@ -31,16 +31,7 @@
 		border-radius: 10px;
 
 		transition: all 0.3s ease-in-out;
-		background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
-
-		@media (prefers-color-scheme: dark) {
-			background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(238, 237, 237, 0.5) 100%);
-		}
-
-		html[data-theme='dark'] {
-			background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(238, 237, 237, 0.5) 100%);
-		}
-		
+		background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, var(--thumbShadow));
 
 	}
 
